@@ -17,6 +17,10 @@
 </p>
 
 <p>
+	<strong>Login with Yahoo!</strong>. Contributed by @neo191987, slightly modified and documented by us.
+</p>
+
+<p>
 	<strong>Bug fixes and minor improvements</strong>. Please take a look at the CHANGELOG below.
 </p>
 
