@@ -1,0 +1,37 @@
+;; @package   AkeebaSocialLogin
+;; @copyright Copyright (c)2016-2023 Nicholas K. Dionysopoulos / Akeeba Ltd
+;; @license   GNU General Public License version 3, or later
+
+PLG_SOCIALLOGIN_YAHOO = "Akeeba Social Login - Yahoo integration"
+PLG_SOCIALLOGIN_YAHOO_DESCRIPTION = "Allows social login with Yahoo accounts."
+PLG_SOCIALLOGIN_YAHOO_LOGIN_LABEL = "Login with Yahoo"
+PLG_SOCIALLOGIN_YAHOO_LOGIN_DESC = "Login with your Yahoo account. A new account will be created if no matching account exists on our site."
+PLG_SOCIALLOGIN_YAHOO_LINK_LABEL = "Link Yahoo"
+PLG_SOCIALLOGIN_YAHOO_LINK_DESC = "Links your user on this site from your Yahoo account. You can then use your Yahoo account to log in to this site."
+PLG_SOCIALLOGIN_YAHOO_UNLINK_LABEL = "Unlink Yahoo"
+PLG_SOCIALLOGIN_YAHOO_UNLINK_DESC = "Unlinks your user on this site from your Yahoo account"
+PLG_SOCIALLOGIN_YAHOO_FIELD_APPID_LABEL = "Yahoo Client ID"
+PLG_SOCIALLOGIN_YAHOO_FIELD_APPID_DESC = "Enter the Client ID for your Yahoo OAuth2 application here. This is required to enable social login with Yahoo. You can create a Yahoo OAuth2 app free of charge at <a href='https://developer.yahoo.com'>the Yahoo developer portal</a>."
+PLG_SOCIALLOGIN_YAHOO_FIELD_APPSECRET_LABEL = "Yahoo Client Secret"
+PLG_SOCIALLOGIN_YAHOO_FIELD_APPSECRET_DESC = "Enter the Client Secret for your Yahoo OAuth2 application here. This is required to enable social login with Yahoo. You can create a Yahoo OAuth2 app free of charge at <a href='https://developer.yahoo.com'>the Yahoo developer portal</a>."
+PLG_SOCIALLOGIN_YAHOO_FIELD_LOGINUNLINKED_LABEL = "Allow social login to non-linked accounts"
+PLG_SOCIALLOGIN_YAHOO_FIELD_LOGINUNLINKED_DESC = "When enabled allows users to log in despite not having linked their Yahoo account to their site user account. Their Yahoo account's email address must be the same as the email account they use on your site and it must be publicly visible."
+PLG_SOCIALLOGIN_YAHOO_FIELD_CREATENEW_LABEL = "Create new user accounts"
+PLG_SOCIALLOGIN_YAHOO_FIELD_CREATENEW_DESC = "Creates a new Joomla! user when a user tries to log in via Yahoo but there is no Joomla! user account associated with that email or Yahoo User ID. If user registration is disabled no account will be created and an error will be raised. The user's Yahoo account must have a publicly visible email address. The new Joomla! user will have a username derived from the Yahoo login, the same email address as the Yahoo account and a long, random password (which the user can change once they have logged in). Set this to No to prevent creation of user accounts through Yahoo login."
+PLG_SOCIALLOGIN_YAHOO_FIELD_FORCENEW_LABEL = "Ignore Joomla! setting for creating user accounts"
+PLG_SOCIALLOGIN_YAHOO_FIELD_FORCENEW_DESC = "When both this option and the 'Create new user accounts' option above are enabled a new user will always be created, even if you have disabled user registration in the options of Joomla's Users page. This is useful to prevent anyone from registering to your site <em>unless</em> they have a Yahoo account."
+PLG_SOCIALLOGIN_YAHOO_FIELD_BYPASSVALIDATION_LABEL = "Bypass user validation for Yahoo users"
+PLG_SOCIALLOGIN_YAHOO_FIELD_BYPASSVALIDATION_DESC = "Only applies when creating new user accounts. When this option is enabled, the new Joomla! user will be created active, without going through the Joomla! user account validation. This means that no account activation email will be sent to the user or the administrators of the Joomla! site. This is safe because Yahoo only allows users with a verified email address to use their Yahoo account to login to external sites."
+PLG_SOCIALLOGIN_YAHOO_FIELD_CUSTOMCSS_LABEL = "Button styling"
+PLG_SOCIALLOGIN_YAHOO_FIELD_CUSTOMCSS_DESC = "When enabled custom CSS for login, link and unlink button styling will be output to the page header. Disable this option if you intend to use your own CSS to style the buttons."
+PLG_SOCIALLOGIN_YAHOO_FIELD_FGCOLOR_LABEL = "Button foreground color"
+PLG_SOCIALLOGIN_YAHOO_FIELD_FGCOLOR_DESC = "The foreground (text) color for the login, link and unlink buttons created with this plugin. Default: <code>#FFFFFF</code>"
+PLG_SOCIALLOGIN_YAHOO_FIELD_BGCOLOR_LABEL = "Button background color"
+PLG_SOCIALLOGIN_YAHOO_FIELD_BGCOLOR_DESC = "The background color for the login, link and unlink buttons created with this plugin. Default: <code>#000000</code>"
+PLG_SOCIALLOGIN_YAHOO_ERROR_NOT_LOGGED_IN_FB = "You are not logged into Yahoo or you didn't grant permissions for this site to log you in through Yahoo."
+PLG_SOCIALLOGIN_YAHOO_ERROR_ACCOUNT_DISABLED_OR_NOT_ACTIVATED = "Your account on this site is disabled or not activated."
+PLG_SOCIALLOGIN_YAHOO_ERROR_LOCAL_NOT_FOUND = "You do not have an account on this site that corresponds to this Yahoo account; or you have chosen not to share your email address in your public Yahoo profile (this means we can't identify you)."
+PLG_SOCIALLOGIN_YAHOO_ERROR_LOCAL_USERNAME_CONFLICT = "An account with the same username or email address as your Yahoo account already exists on this site; or you have chosen not to share your email address in your public Yahoo profile (this means we can't identify you). Please log in to your account on this site and then link your Yahoo account to it. If you do not remember having a user account yet please create a new one first."
+PLG_SOCIALLOGIN_YAHOO_ERROR_CANNOT_CREATE = "Could not create a new user on our site: %s"
+PLG_SOCIALLOGIN_YAHOO_NOTICE_USERACTIVATE = "Your email address needs to be verified before logging in to this site. An email has been sent to you with instructions. After following these instructions please come back here and retry logging in to this site using Yahoo."
+PLG_SOCIALLOGIN_YAHOO_NOTICE_ADMINACTIVATE = "Your account needs to be reviewed by an administrator. When the review process is complete you will receive a confirmation email. After receiving that email please come back here and retry logging in to this site using Yahoo."
