@@ -5,6 +5,7 @@ Akeeba SocialLogin 4.7.0
 + Login with Spotify
 + Login with PayPal
 + Login with Twitch
++ Login with Yahoo
 # [HIGH] Fatal error on Joomla! 5 [gh-110]
 
 Akeeba SocialLogin 4.6.0
